--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,15 @@
             android:theme="@style/AppTheme.Base">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".DetailActivity"
-                  android:theme="@style/AppTheme.Base">
+        <activity
+            android:name=".DetailActivity"
+            android:theme="@style/AppTheme.Base">
+        </activity>
+        <activity android:name=".ImageActivity">
         </activity>
     </application>
 
